# bevy-auto-timer

./: .gitlab-ci.yml  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
